# angry-surgeon

angry-surgeon-core/: Cargo.toml
angry-surgeon-core/src/: active.rs  lib.rs  pads.rs  passive.rs
angry-surgeon-daisy/: Cargo.toml  boot.sh  build.rs  flash.sh  memory.x  my-link.x
angry-surgeon-daisy/.cargo/: config.toml
angry-surgeon-daisy/src/: audio.rs  fs.rs  main.rs  serial.rs  tui.rs
angry-surgeon-daisy/src/audio/: hw.rs  mod.rs
angry-surgeon-daisy/src/fs/: hw.rs  mod.rs
angry-surgeon-daisy/src/input/: analog.rs  clock.rs  digital.rs  i2c.rs  mod.rs  touch.rs
angry-surgeon-linux/: Cargo.toml
angry-surgeon-linux/src/: audio.rs  fs.rs  input.rs  main.rs  tui.rs
angry-surgeon-stm32h7/: Cargo.toml
angry-surgeon-stm32h7/.cargo/: config.toml
