[package]
name = "angry-surgeon-daisy"
version = "0.1.0"
edition = "2024"

[dependencies]
angry-surgeon-core = { path = "../angry-surgeon-core" }

cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = { version = "0.7.5", features = ["set-vtor"] }
embassy-futures = "0.1.1"

embedded-alloc = "0.6.0"
embedded-hal = "1.0.0"
embedded-hal-02 = { package = "embedded-hal", version = "0.2.6", features = ["unproven"] }
embedded-hal-async = "1.0.0"
embedded-io = "0.6.1"
embedded-sdmmc = { version = "0.9.0", default-features = false }
futures = { version = "0.3.31", default-features = false, features = ["alloc"] }
grounded = "0.2.0"
heapless = "0.8.0"
micromath = "2.1.0"
rtic = { version = "2.1.3", features = ["thumbv7-backend"] }
# rtic-monotonics = { version = "2.0.3", features = ["stm32h750ib", "stm32_tim5"] }
rtic-monotonics = { version = "2.0.3", features = ["cortex-m-systick"] }
rtic-sync = "1.3.2"
serde = { version = "1.0.219", default-features = false, features = ["alloc"] }
serde_json = { version = "1.0.140", default-features = false, features = ["alloc"] }
static_cell = "2.1.0"
stm32h7xx-hal = { path = "../stm32h7xx-hal", features = ["stm32h750v", "sdmmc-fatfs"] }
tinyrand = "0.5.0"

[profile.release]
strip = true
lto = "fat"
opt-level = "z"
incremental = false
codegen-units = 1
debug = false
panic = "abort"
