[package]
name = "angry-surgeon-linux"
version = "0.1.0"
edition = "2021"

[dependencies]
angry-surgeon-core = { path = "../angry-surgeon-core", features = ["std"] }

color-eyre = "0.6.3"
cpal = { version = "0.15.3", features = ["jack"] }
crossterm = "0.29.0"
embedded-io-adapters = { version = "0.6.1", features = ["futures-03"] }
embedded-io-async = { version = "0.6.1", features = ["std"] }
futures = "0.3.31"
midir = "0.10.1"
midly = "0.5.3"
ratatui = "0.29.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_arrays = "0.2.0"
serde_json = "1.0.140"
tinyrand = "0.5.0"
